pag principal y estilos

--- a/index.html
+++ b/index.html
@@ -1,15 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
-    <title>Document</title>
+    <link rel="icon" href="./images/favicon-32x32.png">
+    <title>INSURE</title>
 </head>
-<body>
-    <h1>Contenido en desarrollo</h1>
 
-    <script src="./scripts/script.js"></script>
+<body>
+    <header class="header">
+        <nav class="header__nav">
+            <figure class="nav__image">
+                <a href="/index.html"><img src="/images/logo.svg" alt="logo insure" /></a>
+
+                <ul class="nav__list">
+                    <li class="list">BLOG</li>
+                    <li class="list">ACCOUNT</li>
+                    <a href="/pages/contacto.html" target="_blank">
+                        <li class="list" id="view"> CONTACT </li>
+                    </a>
+                </ul>
+            </figure>
+
+        </nav>
+    </header>
+    <main class="main">
+        <section class="main__section__inicio">
+            <article class="main__article__inicio">
+                <hr>
+                <br>
+                <br>
+
+                <h1>Humanizing <br>
+                    your
+                    insurance.</h1>
+                <p id="texto__inicio">
+                    <br>
+                    Get your life insurance converage easier and faster. We blend our
+                    expertise
+                    <br>
+                    and technology to help you find the plan that's right for
+                    you. Ensure you
+                    <br>
+                    and your loved ones are protected.
+
+                </p>
+                <br>
+                <li id="list__view__plans">VIEW PLANS</li>
+            </article>
+            <figure class="main__image">
+                <img src="images/image-intro-desktop.jpg" alt="familia tomada de la mano caminando" />
+        </section>
+
+        <section class="main__section__centro">
+            <figure id="lineas__izquierda"><img src="./images/bg-pattern-intro-left-desktop.svg" alt="patrón de lineas">
+            </figure>
+            <h2>We're different</h2>
+            <br>
+            <div class="snappy">
+                <figure class="img__snappy">
+                    <img src="./images/icon-snappy-process.svg" alt="icono de rayo" />
+                </figure>
+                <br>
+                <h4>Snappy Process</h4>
+                <p>
+                    Our application process can be completed in minutes, not hours.
+                    Don't get stuck filling in tedious forms.
+                </p>
+            </div>
+            <div class="prices">
+                <figure class="img__prices">
+                    <img src="./images/icon-affordable-prices.svg" alt="icono signo peso" />
+                </figure>
+                <br>
+                <h4>Affordable Prices</h4>
+                <p>
+                    We dont want you worrying about high monthly costs. Our prices may
+                    be low, but we still offer the best coverage possiale.
+                </p>
+            </div>
+            <div class="people">
+                <figure class="img__people">
+                    <img src="./images/icon-people-first.svg" alt="icono de usuario" />
+                </figure>
+                <br>
+                <h4>People First</h4>
+                <p>
+                    Our plans aren't full of conditions and clauses to prevent payouts. We make sure you're covered when
+                    you need it.
+                </p>
+            </div>
+        </section>
+
+    </main>
+    <footer class="footer">
+        <figure class="footer__image">
+            <img src="./images/logo.svg" alt="logo insure" />
+        </figure>
+
+        <br>
+        <hr id="hr__footer">
+        <br>
+        <section class="footer__div">
+            <div class="div_uno">
+                <ul class="footer__div__list">
+                    <h5 class="tittle"> OUR COMPANY</h5>
+                    <br>
+                    <li class="div__list">HOW WE WORK</li>
+                    <li class="div__list">WHY INSURE?</li>
+                    <li class="div__list">VIEW PLANS</li>
+                    <li class="div__list">REVIEWS</li>
+                </ul>
+                <div class="div_dos">
+                    <ul class="footer__div__list">
+                        <h5 class="tittle">HELP ME</h5>
+                        <br>
+                        <li class="div__list">FAQ </li>
+                        <li class="div__list">TERMS OF USE</li>
+                        <li class="div__list">PRIVACY POLICY</li>
+                        <li class="div__list">COOKIES</li>
+                    </ul>
+                </div>
+                <div class="div_tres">
+                    <ul class="footer__div__list">
+                        <h5 class="tittle">CONTACT</h5>
+                        <br>
+                        <li class="div__list">SALES</li>
+                        <li class="div__list">SUPPORT</li>
+                        <li class="div__list">LIVE CHAT</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <script src="./scripts/script.js"></script>
 </body>
+
 </html>
