--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,22 +11,19 @@
 </head>
 
 <body>
-  <header class="header">
-    <nav class="header__nav">
-      <figure class="nav__image">
-        <a href="/index.html"><img src="/images/logo.svg" alt="logo insure" /></a>
-        <ul class="nav__list">
-          <li class="list">BLOG</li>
-          <li class="list">ACCOUNT</li>
-          <li class="list" id="view">CONTACT</li>
+  <header>
+    <div class="logo">
+        <img src="/images/logo.svg" alt="Logo de la página">
+    </div>
+    <nav>
+        <ul>
+            <li><a href="/index.html">Inicio</a></li>
+            <li><a href="#">Nosotros</a></li>
+            <li><a href="./pages/contacto.html">Contacto</a></li>
         </ul>
-      </figure>
-
     </nav>
-  </header>
+</header>
   <main class="main">
-    <figure id="lineas__izquierda"><img src="/images/bg-pattern-intro-left-desktop.svg" alt="patrón de lineas">
-    </figure>
 
     <section class="main__section__centro">
       <form id="form">
@@ -58,45 +55,32 @@
       </table>
     </section>
   </main>
-  <footer class="footer">
-    <figure class="footer__image">
-      <img src="/images/logo.svg" alt="logo insure" />
-    </figure>
+  <footer>
+    <div class="footer-left">
+        <div class="logo">
+            <img src="/images/logo.svg" alt="Logo de la página">
+        </div>
+        <div class="social-icons">
+            <div class="social-icons">
+                <a href="#" class="social-icon">
+                    <img src="/images/facebook-logo.png" alt="Facebook" width="35px">
+                </a>
 
-    <br>
-    <hr id="hr__footer">
-    <br>
-    <section class="footer__div">
-      <div class="div_uno">
-        <ul class="footer__div__list">
-          <h5 class="tittle"> OUR COMPANY</h5>
-          <br>
-          <li class="div__list">HOW WE WORK</li>
-          <li class="div__list">WHY INSURE?</li>
-          <li class="div__list">VIEW PLANS</li>
-          <li class="div__list">REVIEWS</li>
-        </ul>
-        <div class="div_dos">
-          <ul class="footer__div__list">
-            <h5 class="tittle">HELP ME</h5>
-            <br>
-            <li class="div__list">FAQ </li>
-            <li class="div__list">TERMS OF USE</li>
-            <li class="div__list">PRIVACY POLICY</li>
-            <li class="div__list">COOKIES</li>
-          </ul>
+                <a href="#" class="social-icon">
+                    <img src="/images/instagram-logo.png" alt="Instagram" width="35px">
+                </a>
+            </div>
         </div>
-        <div class="div_tres">
-          <ul class="footer__div__list">
-            <h5 class="tittle">CONTACT</h5>
-            <br>
-            <li class="div__list">SALES</li>
-            <li class="div__list">SUPPORT</li>
-            <li class="div__list">LIVE CHAT</li>
-          </ul>
-        </div>
-      </div>
-    </section>
+    </div>
+    <div class="footer-right">
+        <p>Dirección: Calle Principal 123</p>
+        <p>País: Colombia</p>
+        <p>Teléfono: 123-456-7890</p>
+    </div>
+    <div class="footer-bottom">
+        <p>Derechos de autor &copy; 2023 - Insure</p>
+    </div>
+</footer>
     <script src="/scripts/script.js"></script>
 </body>
 
