--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,21 +5,21 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/styles/contacto.css">
-  <link rel="icon" href="/images/favicon-32x32.png">
+  <link rel="stylesheet" href="../styles/contacto.css">
+  <link rel="icon" href="../images/favicon-32x32.png">
   <title>Contact</title>
 </head>
 
 <body>
   <header>
     <div class="logo">
-        <img src="/images/logo.svg" alt="Logo de la página">
+        <img src="../images/logo.svg" alt="Logo de la página">
     </div>
     <nav>
         <ul>
-            <li><a href="/index.html">Inicio</a></li>
+            <li><a href="../index.html">Inicio</a></li>
             <li><a href="#">Nosotros</a></li>
-            <li><a href="./pages/contacto.html">Contacto</a></li>
+            <li><a href="../pages/contacto.html">Contacto</a></li>
         </ul>
     </nav>
 </header>
@@ -58,16 +58,16 @@
   <footer>
     <div class="footer-left">
         <div class="logo">
-            <img src="/images/logo.svg" alt="Logo de la página">
+            <img src="../images/logo.svg" alt="Logo de la página">
         </div>
         <div class="social-icons">
             <div class="social-icons">
                 <a href="#" class="social-icon">
-                    <img src="/images/facebook-logo.png" alt="Facebook" width="35px">
+                    <img src="../images/facebook-logo.png" alt="Facebook" width="35px">
                 </a>
 
                 <a href="#" class="social-icon">
-                    <img src="/images/instagram-logo.png" alt="Instagram" width="35px">
+                    <img src="../images/instagram-logo.png" alt="Instagram" width="35px">
                 </a>
             </div>
         </div>
@@ -81,7 +81,7 @@
         <p>Derechos de autor &copy; 2023 - Insure</p>
     </div>
 </footer>
-    <script src="/scripts/script.js"></script>
+    <script src="../scripts/script.js"></script>
 </body>
 
 </html>
